// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter 1`] = `
[
  [
    {
      "name": "ccc",
    },
  ],
  [
    {
      "name": "ddd",
    },
  ],
  [
    {
      "name": "foo",
    },
  ],
]
`;

exports[`filter 2`] = `
[
  [
    {
      "name": "foo",
    },
  ],
]
`;

exports[`map 1`] = `
[
  [
    "foo",
  ],
]
`;
